# robot

./: CMakeLists.txt  COD_H7_Template_CLion.ioc  README.md  openocd.cfg
Core/Inc/: FreeRTOSConfig.h
Core/Src/: freertos.c  main.c  usart.c
USER/Application/Task/Arm/: Arm_Task.c  Arm_Task.h
USER/Application/Task/Inc/: CAN_Task.h  Config.h
USER/Application/Task/Src/: CAN_Task.c  Control_Task.c  Detect_Task.c
USER/BSP/Inc/: bsp_can.h
USER/BSP/Src/: bsp_can.c  bsp_uart.c
USER/Components/Algorithm/Inc/: Arm_Kinematics.h
USER/Components/Algorithm/Src/: Arm_Kinematics.c  Quaternion.c
USER/Components/Controller/Inc/: Gimbal_Pid.h  PID.h
USER/Components/Controller/Src/: Gimbal_Pid.c  PID.c
USER/Components/Device/Inc/: B2B_Communication.h  Ix6_Remote.h  Motor.h  Referee_System.h  Remote_Control.h
USER/Components/Device/Src/: B2B_Communication.c  Ix6_Remote.c  Motor.c  Remote_Control.c  usart_printf_task.c
